--- Auto Git Commit By Rajatz ---

--- a/studentapp/Backend/Dockerfile
+++ b/studentapp/Backend/Dockerfile
@@ -4,7 +4,7 @@ LABEL APP="Studentapp"
 LABEL Auth="devops"
 USER root
 WORKDIR /opt/
-ADD https://dlcdn.apache.org/tomcat/tomcat-8/v8.5.99/bin/apache-tomcat-8.5.99.tar.gz .
+ADD https://dlcdn.apache.org/tomcat/tomcat-8/v8.5.99/bin/apache-tomcat-8.5.99.tar.gz 
 RUN tar -xzvf apache-tomcat-8.5.99.tar.gz 
 RUN yum install java -y
 WORKDIR /opt/apache-tomcat-8.5.99
