--- a/kubernetes/kubeadm/first-Pod.yaml
+++ b/kubernetes/kubeadm/first-Pod.yaml
@@ -1,16 +1,10 @@
 apiVersion: v1
-kind: Pod
+kind: Service
 metadata:
   name: myapp
-  labels:
-    name: myapp
 spec:
-  containers:
-  - name: myapp
-    image: <Image>
-    resources:
-      limits:
-        memory: "128Mi"
-        cpu: "500m"
-    ports:
-      - containerPort: <Port>
+  selector:
+    app: myapp
+  ports:
+  - port: <Port>
+    targetPort: <Target Port>
