--- a/kubernetes/kubeadm/first-Pod.yaml
+++ b/kubernetes/kubeadm/first-Pod.yaml
@@ -1,10 +1,16 @@
 apiVersion: v1
-kind: Service
+kind: Pod
 metadata:
   name: myapp
+  labels:
+    name: myapp
 spec:
-  selector:
-    app: myapp
-  ports:
-  - port: <Port>
-    targetPort: <Target Port>
+  containers:
+  - name: myapp
+    image: <Image>
+    resources:
+      limits:
+        memory: "128Mi"
+        cpu: "500m"
+    ports:
+      - containerPort: <Port>
