--- Auto Git Commit By Rajatz ---

--- a/kubernetes/kubeadm/first-Pod.yaml
+++ b/kubernetes/kubeadm/first-Pod.yaml
@@ -6,7 +6,7 @@ metadata:
     name: myapp
 spec:
   containers:
-  - name: myapp
-    image: <Image>
+  - name: myapp-conatiner
+    image: nginx
     ports:
       - containerPort: <Port>
