--- a/kubernetes/kubeadm/service.yml
+++ b/kubernetes/kubeadm/service.yml
@@ -12,6 +12,6 @@ ports:
     targetPort: 80
 
   - protocol: TCP
-    name: http
-    port: 80
-    targetPort: 80
+    name: java
+    port: 8080
+    targetPort: 8080
