--- Auto Git Commit By Rajatz ---

--- a/kubernetes/rc.yaml
+++ b/kubernetes/rc.yaml
@@ -13,7 +13,7 @@ spec:
         app: myapp
     spec:
       containers:
-        - name: myapp
+        - name: my
           image: <Image>
           ports:
             - containerPort: <Port>
