--- a/kubernetes/rs.yaml
+++ b/kubernetes/rs.yaml
@@ -4,10 +4,13 @@ metadata:
   name: frontend
   labels:
     app: myapp
+    tier: frontend
 spec:
   # modify replicas according to your case
   replicas: 3
   selector:
+    matchLabels:
+      tier: frontend
   template:
     metadata:
       labels:
