--- a/kubernetes/rs.yaml
+++ b/kubernetes/rs.yaml
@@ -18,4 +18,5 @@ spec:
     spec:
       containers:
       - name: myapp-cont
-        image: us-docker.pkg.dev/google-samples/containers/gke/gb-frontend:v5
+        image: nginx
+        
