--- Auto Git Commit By Rajatz ---

--- a/kubernetes/sample/pod.yml
+++ b/kubernetes/sample/pod.yml
@@ -5,6 +5,6 @@ metadata:
 spec:
   containers:
   - name: nginx-container
-    image: rajatpzade/sample
+    image: rajatpzade/cbzpage:latest
     ports:
     - containerPort: 80
