--- Auto Git Commit By Rajatz ---

--- a/kubernetes/sample/rc.yml
+++ b/kubernetes/sample/rc.yml
@@ -13,6 +13,6 @@ spec:
     spec:
       containers:
       - name: myapp-container
-        image: 
+        image:rajatpzade/sample:latest
         ports:
         - containerPort: 80
