--- a/kubernetes/sample/rs.yaml
+++ b/kubernetes/sample/rs.yaml
@@ -24,3 +24,20 @@ spec:
 
 ---
 
+...
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend-service
+spec:
+  type: NodePort
+  selector:
+    app: myapp
+    tier: frontend
+  ports:
+  - port: 80
+    targetPort: 80
+    nodePort: 30000 
+
+    
