--- Auto Git Commit By Rajatz ---

--- a/kubernetes/sample/rs.yaml
+++ b/kubernetes/sample/rs.yaml
@@ -18,9 +18,10 @@ spec:
     spec:
       containers:
       - name: myapp-cont
-        image: rajatpzade/sample:latest
-      ports:
-       - containerPort: 80  
+        image: nginx
+        ports:
+        - containerPort: 80
+
 
 ---
 
