--- a/kubernetes/sample/rs.yaml
+++ b/kubernetes/sample/rs.yaml
@@ -21,20 +21,20 @@ spec:
         ports:
         - containerPort: 80
 
-...
+# ...
 
-apiVersion: v1
-kind: Service
-metadata:
-  name: frontend-service
-spec:
-  type: NodePort
-  selector:
-    app: myapp
-    tier: frontend
-  ports:
-  - port: 80
-    targetPort: 80
-    nodePort: 30000 
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: frontend-service
+# spec:
+#   type: NodePort
+#   selector:
+#     app: myapp
+#     tier: frontend
+#   ports:
+#   - port: 80
+#     targetPort: 80
+#     nodePort: 30000 
 
----    
+# ---    
