--- a/kubernetes/sample/rs-svc.yml
+++ b/kubernetes/sample/rs-svc.yml
@@ -1,13 +1,13 @@
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: frontend-service
-# spec:
-#   type: NodePort
-#   selector:
-#     app: myapp
-#     tier: frontend
-#   ports:
-#   - port: 80
-#     targetPort: 80
-#     nodePort: 30000 
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend-service
+spec:
+  type: NodePort
+  selector:
+    app: myapp
+    tier: frontend
+  ports:
+  - port: 80
+    targetPort: 80
+    nodePort: 30000 
