--- a/kubernetes/sample/rs.yaml
+++ b/kubernetes/sample/rs.yaml
@@ -1,3 +1,18 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend-service
+spec:
+  type: NodePort
+  selector:
+    app: myapp
+    tier: frontend
+  ports:
+  - port: 80
+    targetPort: 80
+    nodePort: 30000  # Choose a port number within the range 30000-32767
+
+---
 apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
@@ -13,28 +28,11 @@ spec:
   template:
     metadata:
       labels:
+        app: myapp
         tier: frontend
     spec:
       containers:
       - name: myapp-cont
-        image: rajatpzade/sample:latest
+        image: nginx
         ports:
         - containerPort: 80
-
-# ...
-
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: frontend-service
-# spec:
-#   type: NodePort
-#   selector:
-#     app: myapp
-#     tier: frontend
-#   ports:
-#   - port: 80
-#     targetPort: 80
-#     nodePort: 30000 
-
-# ---    
