--- Auto Git Commit By Rajatz ---

--- a/kubernetes/sample/rs.yaml
+++ b/kubernetes/sample/rs.yaml
@@ -33,6 +33,6 @@ spec:
     spec:
       containers:
       - name: myapp-cont
-        image: raj
+        image: rajatpzade/sample:latest
         ports:
         - containerPort: 80
