--- a/kubernetes/sample/deployment.yaml
+++ b/kubernetes/sample/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: myapp-cont
-        image: nginx
+        image: rajatpzade/sample:latest
         ports:
         - containerPort: 80
 
