--- a/manifest/rc.yaml
+++ b/manifest/rc.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: my-container
-        image: my-image:latest
+        image: nginx
         ports:
         - containerPort: 80
 ---
