--- Auto Git Commit By Rajatz ---

--- a/Docker/studentapp-project/my-app/dockerfile
+++ b/Docker/studentapp-project/my-app/dockerfile
@@ -1,6 +1,6 @@
 FROM centos:7
 
-LABEL author "shubham kalsait"
+LABEL author "Rajatpzade"
 LABEL description "my first docker file"
 
 RUN yum install httpd -y
