--- a/kubernetes/studentapp-project/frontend/deployement.yaml
+++ b/kubernetes/studentapp-project/frontend/deployement.yaml
@@ -1,1 +1,22 @@
-kind: De
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: myapp
+spec:
+  selector:
+    matchLabels:
+      app: myapp
+  template:
+    metadata:
+      labels:
+        app: myapp
+    spec:
+      containers:
+      - name: myapp
+        image: <Image>
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
+        ports:
+        - containerPort: <Port>
