--- Auto Git Commit By Rajatz ---

--- a/kubernetes/studentapp-project/frontend/deployement.yaml
+++ b/kubernetes/studentapp-project/frontend/deployement.yaml
@@ -9,10 +9,10 @@ spec:
   template:
     metadata:
       labels:
-        app: myapp
+        app: frontend-app
     spec:
       containers:
-      - name: myapp
+      - name: frontend-app
         image: <Image>
         resources:
           limits:
