--- Auto Git Commit By Rajatz ---

--- a/kubernetes/studentapp-project/frontend/deployement.yaml
+++ b/kubernetes/studentapp-project/frontend/deployement.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: frontend-app
-        image: rajatpzade/frontend
+        image: rajatpzade/frontend-app:latest
         resources:
           limits:
             memory: "128Mi"
