--- Auto Git Commit By Rajatz ---

--- a/kubernetes/studentapp-project/frontend/service.yaml
+++ b/kubernetes/studentapp-project/frontend/service.yaml
@@ -1,1 +1,10 @@
-kind: ser
+apiVersion: v1
+kind: Service
+metadata:
+  name: myapp
+spec:
+  selector:
+    app: myapp
+  ports:
+  - port: <Port>
+    targetPort: <Target Port>
