--- a/kubernetes/studentapp-project/backend/deployment.yaml
+++ b/kubernetes/studentapp-project/backend/deployment.yaml
@@ -19,6 +19,7 @@ spec:
             memory: "128Mi"
             cpu: "500m"
         ports:
+        - name: java
         - containerPort: 8080
 replicas: 2
 selector:
