--- a/kubernetes/studentapp-project/backend/deployment.yaml
+++ b/kubernetes/studentapp-project/backend/deployment.yaml
@@ -20,7 +20,8 @@ spec:
             cpu: "500m"
         ports:
         - name: java
-        - containerPort: 8080
+          protocol: TCP
+          containerPort: 8080
 replicas: 2
 selector:
    matchLabels:
