--- a/kubernetes/studentapp-project/backend/deployment.yaml
+++ b/kubernetes/studentapp-project/backend/deployment.yaml
@@ -25,6 +25,6 @@ spec:
 replicas: 2
 selector:
    matchLabels:
-      app: frontend-app
+      app: backend-app
 strategy: 
    type: RollingUpdate            
