--- a/kubernetes/studentapp-project/backend/service.yaml
+++ b/kubernetes/studentapp-project/backend/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-service
+  name: backend-service
 spec:
   selector:
     app: frontend-app
