--- a/kubernetes/studentapp-project/ingress.yaml
+++ b/kubernetes/studentapp-project/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: demo.com
+  - host: a89869c0c45444a259bad174d0b3196a-76373897.sa-east-1.elb.amazonaws.com
     http:
       paths:
       - path: /
