--- a/kubernetes/ingress/k8s/mobileapp/deployment.yaml
+++ b/kubernetes/ingress/k8s/mobileapp/deployment.yaml
@@ -1,63 +1,31 @@
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: backend-app
-# spec:
-#   selector:
-#     matchLabels:
-#       app: backend-app
-#   template:
-#     metadata:
-#       labels:
-#         app: backend-app
-#     spec:
-#       containers:
-#       - name: backend-app
-#         image: rajatpzade/backend-app:latest
-#         resources:
-#           limits:
-#             memory: "128Mi"
-#             cpu: "500m"
-#         ports:
-#         - name: java
-#           protocol: TCP
-#           containerPort: 8080
-# replicas: 2
-# selector:
-#    matchLabels:
-#       app: backend-app
-# strategy: 
-#    type: RollingUpdate            
-
-
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend-app
+  name: homeapp
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: backend-app
+      app: homeapp
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 1
+      maxUnavailable: 2
+      maxSurge: 2
   template:
     metadata:
       labels:
-        app: backend-app
+        app: homeapp
     spec:
       containers:
-      - name: backend-app
-        image: rajatpzade/backend-app:latest
+      - name: homeapp
+        image: rajatpzade/homeapp:latest
         resources:
           limits:
             memory: "128Mi"
             cpu: "500m"
         ports:
-        - name: java
+        - name: http
           protocol: TCP
-          containerPort: 8080
+          containerPort: 80
+
