--- a/kubernetes/ingress/k8s/mobileapp/service.yaml
+++ b/kubernetes/ingress/k8s/mobileapp/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-service
+  name: mobileapp-service
 spec:
   selector:
     app: backend-app
