--- Auto Git Commit By Rajatz ---

--- a/kubernetes/ingress/k8s/ingress.yaml
+++ b/kubernetes/ingress/k8s/ingress.yaml
@@ -14,7 +14,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: frontend-service
+            name: homeapp-service
             port:
               number: 80
       - path: /student
