--- a/kubernetes/ingress/k8s/ingress.yaml
+++ b/kubernetes/ingress/k8s/ingress.yaml
@@ -21,6 +21,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: backend-service
+            name: mobileapp-service
             port:
-              number: 8080
+              number: 80
