--- a/kubernetes/ingress/k8s/homeapp/deployement.yaml
+++ b/kubernetes/ingress/k8s/homeapp/deployement.yaml
@@ -3,15 +3,15 @@ kind: Deployment
 metadata:
   name: homeapp
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: homeapp
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxUnavailable: 2
-      maxSurge: 2
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: homeapp
-        image: rajatpzade/homeapp:latest
+        image: rajatpzade/myhome:latest
         resources:
           limits:
             memory: "128Mi"
