--- a/kubernetes/ingress/k8s/homeapp/service.yaml
+++ b/kubernetes/ingress/k8s/homeapp/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: homeapp-service
 spec:
   selector:
-    app: homeapp-app
+    app: homeapp
   ports:
   - port: 80
     targetPort: 80
