--- a/kubernetes/ingress/k8s/mobileapp/service.yaml
+++ b/kubernetes/ingress/k8s/mobileapp/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: mobileapp-service
 spec:
   selector:
-    app: backend-app
+    app: app
   ports:
   - port: 80
     targetPort: 80
