--- Auto Git Commit By Rajatz ---

--- a/kubernetes/ingress/docker/homeapp/dockerfile
+++ b/kubernetes/ingress/docker/homeapp/dockerfile
@@ -4,9 +4,15 @@ FROM centos:7
 # Install Apache HTTP Server
 RUN yum -y update && yum -y install httpd && yum clean all
 
-# Copy the HTML and CSS files into the default Apache document root directory
-COPY index.html /var/www/html/
-COPY styles.css /var/www/html/
+# Create home directory inside /var/www/html
+RUN mkdir -p /var/www/html/home
+
+# Set /var/www/html as the working directory
+WORKDIR /var/www/html
+
+# Copy the HTML and CSS files into the /var/www/html/home directory
+COPY index.html home/
+COPY styles.css home/
 
 # Add ServerName directive to suppress the warning
 RUN echo "ServerName localhost" >> /etc/httpd/conf/httpd.conf
