--- a/kubernetes/Manifest/deployment.yml
+++ b/kubernetes/Manifest/deployment.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -28,3 +29,21 @@ spec:
         - name: http
           protocol: TCP
           containerPort: 80
+...
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-service
+spec:
+  selector:
+    app: frontend-app
+  ports:
+  - port: 80
+    targetPort: 80
+    protocol: TCP
+  type: NodePort
+ 
+  ...
