--- a/kubernetes/Manifest/service.yml
+++ b/kubernetes/Manifest/service.yml
@@ -15,3 +15,19 @@ ports:
     name: java
     port: 8080
     targetPort: 8080
+
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-service
+spec:
+  selector:
+    app: frontend-app
+  ports:
+  - port: 80
+    targetPort: 80
+    protocol: TCP
+  type: NodePort
+  nodePort: 30007 
